--- a/package.json
+++ b/package.json
@@ -53,5 +53,18 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.1.0"
-  }
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "eslint.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Krishnabadham/YonderVPN-frontend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Krishnabadham/YonderVPN-frontend/issues"
+  },
+  "homepage": "https://github.com/Krishnabadham/YonderVPN-frontend#readme"
 }
